# Updated-stuhfl-rs

./: Cargo.toml  Notes for Future Work.docx  README.md  Rust Code Cap Import Tutorial.docx  STUHFL Rust.code-workspace  wrapper.h
.github/workflows/: rust.yml
libstuhfl/: Cargo.toml  GUI_Tuning_Results.txt
libstuhfl-sys/: Cargo.toml  build.rs  wrapper.h
libstuhfl-sys/src/: initializers.rs  lib.rs  main.c
libstuhfl/src/: data_types.rs  error.rs  errors.rs  helpers.rs  lib.rs  prelude.rs  profile.rs  reader.rs  st25ru3993.rs  tests.rs
libstuhfl/src/data_types/: enums.rs  mod.rs  structs.rs  traits.rs  types.rs
libstuhfl/src/gen2/: gen2_enums.rs  gen2_reader.rs  gen2_structs.rs  mod.rs
libstuhfl/src/st25ru3993/: gen2.rs
