[package]
name = "libstuhfl"
version = "0.1.0"
authors = [ "Nathan Rowan <rvanathanrowan@gmail.com>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["port_scanning"]
port_scanning = ["serialport"]
reader_tests = ["port_scanning"]

[dependencies]
ffi = { package = "libstuhfl-sys", version = "0.1.0", path = "../libstuhfl-sys" }
enum_primitive = "0.1"
num = "0.4"
derive_builder = "0.11"
serialport = { version = "4.2", optional = true }
lazy_static = "1.4"

[dev-dependencies]
serial_test = "0.8"
