[package]
name = "libstuhfl"
version = "0.1.0"
authors = [ "Nathan Rowan <rvanathanrowan@gmail.com>" ]
edition = "2021"

[features]
default = ["port-scanning"]
port-scanning = ["serialport"]
reader-tests = ["port-scanning"]
use-serde = ["serde"]

[dependencies]
ffi = { package = "libstuhfl-sys", version = "0.1.0", path = "../libstuhfl-sys" }
enum_primitive = "0.1"
num = "0.4"
derive_builder = "0.11"
serialport = { version = "4.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
lazy_static = "1.4"

[dev-dependencies]
serial_test = "0.8"
rand = "0.8"
